# django-brazilian-zipcode

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
examples/: correios_bad_response.json  correios_good_response.json
src/brazilian_zipcode/: __init__.py  forms.py  injection.py  objects.py  service.py  urls.py  widgets.py
src/brazilian_zipcode/api/: serializers.py  urls.py  views.py
src/brazilian_zipcode/locale/pt_BR/LC_MESSAGES/: django.po
src/brazilian_zipcode/parsers/: base.py  correios.py
src/brazilian_zipcode/static/: getAddressInfo.js
tests/: conftest.py  test_injection.py
tests/test_parsers/: test_correios.py
